--- a/homework.ipynb
+++ b/homework.ipynb
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 91,
       "metadata": {
         "id": "vU_BLpXEBq8E"
       },
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 92,
       "metadata": {
         "id": "WwPXKuYW-MeA"
       },
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 93,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -248,7 +248,7 @@
               "7                    2             2  "
             ]
           },
-          "execution_count": 3,
+          "execution_count": 93,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -270,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 94,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -294,7 +294,7 @@
               "Name: softness, dtype: int64"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 94,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 95,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -330,7 +330,7 @@
               "19"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 95,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -350,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 96,
       "metadata": {
         "id": "WyNxML4oAvRh"
       },
@@ -372,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 97,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -387,7 +387,7 @@
               "np.float64(2.25)"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 97,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -411,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 98,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -441,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 99,
       "metadata": {
         "id": "iN_rB_QJBk_K"
       },
@@ -452,7 +452,7 @@
               "Text(0.5, 1.0, 'Rated Flavor vs Estimated Sweetness')"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 99,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -493,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 100,
       "metadata": {
         "id": "ZcUQ3mnBOLmU"
       },
@@ -507,7 +507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 101,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -531,7 +531,7 @@
               "Name: prediction, dtype: int64"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 101,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -555,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 102,
       "metadata": {
         "id": "CNL0vOHrDfmT"
       },
@@ -564,7 +564,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "#p4 = prediction - truth\n",
-        "p4 = f4(mango_data) - mango_data[\"rated_flavor\"]"
+        "p4 = mango_data[\"rated_flavor\"] - f4(mango_data)"
       ]
     },
     {
@@ -578,7 +578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 103,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -590,10 +590,10 @@
         {
           "data": {
             "text/plain": [
-              "0   -1\n",
-              "1    4\n",
+              "0    1\n",
+              "1   -4\n",
               "2    0\n",
-              "3   -1\n",
+              "3    1\n",
               "4    0\n",
               "5    0\n",
               "6    0\n",
@@ -601,7 +601,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 103,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -623,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 104,
       "metadata": {
         "id": "tI7Fr0blQFJo"
       },
@@ -635,7 +635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 105,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -659,7 +659,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 105,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -683,7 +683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 106,
       "metadata": {
         "id": "zvIjSLCdGbZM"
       },
@@ -716,7 +716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 107,
       "metadata": {
         "id": "j8QCAkWMGdkv"
       },
@@ -727,7 +727,7 @@
               "array([0.2, 4. , 0.8, 0.8, 0. , 0.8, 0. , 0.8])"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 107,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -749,7 +749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 108,
       "metadata": {
         "id": "7O7AReMcTCEJ"
       },
@@ -761,7 +761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 109,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -785,7 +785,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 109,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -808,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 110,
       "metadata": {
         "id": "P-KRYZurHBQY"
       },
@@ -841,7 +841,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 111,
       "metadata": {
         "id": "vxJZcCrlHDGY"
       },
@@ -852,7 +852,7 @@
               "np.float64(3.795000000000001)"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 111,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -875,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 112,
       "metadata": {
         "id": "d65RLeqxVGeL"
       },
@@ -884,7 +884,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p7(df):\n",
-        "    return list(df[\"estimated_sweetness\"])"
+        "    return df[\"estimated_sweetness\"]"
       ]
     },
     {
@@ -898,7 +898,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 113,
       "metadata": {
         "id": "ihAvfuV4VMLS"
       },
@@ -906,10 +906,18 @@
         {
           "data": {
             "text/plain": [
-              "[4, 5, 3, 1, 1, 1, 1, 2]"
+              "0    4\n",
+              "1    5\n",
+              "2    3\n",
+              "3    1\n",
+              "4    1\n",
+              "5    1\n",
+              "6    1\n",
+              "7    2\n",
+              "Name: estimated_sweetness, dtype: int64"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 113,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -931,7 +939,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 114,
       "metadata": {
         "id": "88Ip7dA5TyQg"
       },
@@ -955,7 +963,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 115,
       "metadata": {
         "id": "xXCnP3iTULWw"
       },
@@ -966,7 +974,7 @@
               "np.float64(2.5)"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 115,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -988,7 +996,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 116,
       "metadata": {
         "id": "MC-XVY3IWz3x"
       },
@@ -1011,7 +1019,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 117,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1034,7 +1042,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 117,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1056,7 +1064,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 118,
       "metadata": {
         "id": "J3emV8dqXlgN"
       },
@@ -1069,7 +1077,7 @@
         "    return 0.3 * df[\"yellow_rating\"] + 0.1 * df[\"softness\"] + 0.4 * df[\"estimated_sweetness\"]\n",
         "\n",
         "# L1 = |f(x) - y|\n",
-        "calc_L1 = list(p10(mango_data) - mango_data[\"rated_flavor\"])\n",
+        "calc_L1 = (p10(mango_data) - mango_data[\"rated_flavor\"])\n",
         "p10 = np.abs(calc_L1)\n"
       ]
     },
@@ -1084,7 +1092,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 119,
       "metadata": {
         "id": "64OoS_GZXogM"
       },
@@ -1092,10 +1100,18 @@
         {
           "data": {
             "text/plain": [
-              "array([1.5, 3. , 0.3, 0.5, 0.2, 0.1, 0.2, 0.1])"
+              "0    1.5\n",
+              "1    3.0\n",
+              "2    0.3\n",
+              "3    0.5\n",
+              "4    0.2\n",
+              "5    0.1\n",
+              "6    0.2\n",
+              "7    0.1\n",
+              "dtype: float64"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 119,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1116,7 +1132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 120,
       "metadata": {},
       "outputs": [
         {
@@ -1155,7 +1171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 121,
       "metadata": {},
       "outputs": [
         {
@@ -1164,7 +1180,7 @@
               "np.float64(2.2142857142857144)"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 121,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1187,7 +1203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 122,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1218,7 +1234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 123,
       "metadata": {},
       "outputs": [
         {
@@ -1227,7 +1243,7 @@
               "np.float64(0.33333333333333304)"
             ]
           },
-          "execution_count": 34,
+          "execution_count": 123,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1251,7 +1267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 124,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1282,7 +1298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 125,
       "metadata": {},
       "outputs": [
         {
@@ -1291,7 +1307,7 @@
               "array([0.55555556])"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 125,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1313,7 +1329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 126,
       "metadata": {
         "id": "W1tI40DQZJTZ"
       },
@@ -1333,9 +1349,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 127,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Ellipsis"
+            ]
+          },
+          "execution_count": 127,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p14"
       ]
@@ -1357,7 +1384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 128,
       "metadata": {
         "id": "_1Ty-1wxaKgp"
       },
@@ -1377,9 +1404,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 129,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Ellipsis"
+            ]
+          },
+          "execution_count": 129,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p15"
       ]
@@ -1403,11 +1441,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 130,
       "metadata": {
         "id": "78iwN5f4bKtS"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Ellipsis"
+            ]
+          },
+          "execution_count": 130,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
@@ -1427,11 +1476,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 131,
       "metadata": {
         "id": "ve2czA0Ebzdf"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Ellipsis"
+            ]
+          },
+          "execution_count": 131,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
@@ -1451,7 +1511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 132,
       "metadata": {
         "id": "pqbMFuUpaj5m"
       },
@@ -1463,11 +1523,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 133,
       "metadata": {
         "id": "JbEO9iX4VwQG"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Ellipsis"
+            ]
+          },
+          "execution_count": 133,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
@@ -1489,7 +1560,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 134,
       "metadata": {
         "id": "Ri6AjxYpcZol"
       },
@@ -1501,7 +1572,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 135,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1516,7 +1587,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": null,
+          "execution_count": 135,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1536,9 +1607,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 136,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'p19' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[136]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mp19\u001b[49m\n",
+            "\u001b[31mNameError\u001b[39m: name 'p19' is not defined"
+          ]
+        }
+      ],
       "source": [
         "p19"
       ]
