--- a/homework.ipynb
+++ b/homework.ipynb
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 139,
       "metadata": {
         "id": "vU_BLpXEBq8E"
       },
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 140,
       "metadata": {
         "id": "WwPXKuYW-MeA"
       },
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 141,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -248,7 +248,7 @@
               "7                    2             2  "
             ]
           },
-          "execution_count": 93,
+          "execution_count": 141,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -270,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 142,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -294,7 +294,7 @@
               "Name: softness, dtype: int64"
             ]
           },
-          "execution_count": 94,
+          "execution_count": 142,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 143,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -330,7 +330,7 @@
               "19"
             ]
           },
-          "execution_count": 95,
+          "execution_count": 143,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -350,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 144,
       "metadata": {
         "id": "WyNxML4oAvRh"
       },
@@ -372,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 145,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -387,7 +387,7 @@
               "np.float64(2.25)"
             ]
           },
-          "execution_count": 97,
+          "execution_count": 145,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -411,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 146,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -441,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 147,
       "metadata": {
         "id": "iN_rB_QJBk_K"
       },
@@ -452,7 +452,7 @@
               "Text(0.5, 1.0, 'Rated Flavor vs Estimated Sweetness')"
             ]
           },
-          "execution_count": 99,
+          "execution_count": 147,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -493,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 148,
       "metadata": {
         "id": "ZcUQ3mnBOLmU"
       },
@@ -507,7 +507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 149,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -531,7 +531,7 @@
               "Name: prediction, dtype: int64"
             ]
           },
-          "execution_count": 101,
+          "execution_count": 149,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -555,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 150,
       "metadata": {
         "id": "CNL0vOHrDfmT"
       },
@@ -563,7 +563,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "#p4 = prediction - truth\n",
+        "#p4 = truth - prediction\n",
         "p4 = mango_data[\"rated_flavor\"] - f4(mango_data)"
       ]
     },
@@ -578,7 +578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 151,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -601,7 +601,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 103,
+          "execution_count": 151,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -623,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 152,
       "metadata": {
         "id": "tI7Fr0blQFJo"
       },
@@ -635,7 +635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 153,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -659,7 +659,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 105,
+          "execution_count": 153,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -683,7 +683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 154,
       "metadata": {
         "id": "zvIjSLCdGbZM"
       },
@@ -716,7 +716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 155,
       "metadata": {
         "id": "j8QCAkWMGdkv"
       },
@@ -727,7 +727,7 @@
               "array([0.2, 4. , 0.8, 0.8, 0. , 0.8, 0. , 0.8])"
             ]
           },
-          "execution_count": 107,
+          "execution_count": 155,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -749,7 +749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 156,
       "metadata": {
         "id": "7O7AReMcTCEJ"
       },
@@ -761,7 +761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 157,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -785,7 +785,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 109,
+          "execution_count": 157,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -808,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 158,
       "metadata": {
         "id": "P-KRYZurHBQY"
       },
@@ -841,7 +841,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 159,
       "metadata": {
         "id": "vxJZcCrlHDGY"
       },
@@ -852,7 +852,7 @@
               "np.float64(3.795000000000001)"
             ]
           },
-          "execution_count": 111,
+          "execution_count": 159,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -875,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 160,
       "metadata": {
         "id": "d65RLeqxVGeL"
       },
@@ -884,7 +884,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p7(df):\n",
-        "    return df[\"estimated_sweetness\"]"
+        "    return df[\"estimated_sweetness\"].rename(\"prediction\")"
       ]
     },
     {
@@ -898,7 +898,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 161,
       "metadata": {
         "id": "ihAvfuV4VMLS"
       },
@@ -914,10 +914,10 @@
               "5    1\n",
               "6    1\n",
               "7    2\n",
-              "Name: estimated_sweetness, dtype: int64"
+              "Name: prediction, dtype: int64"
             ]
           },
-          "execution_count": 113,
+          "execution_count": 161,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -939,7 +939,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 162,
       "metadata": {
         "id": "88Ip7dA5TyQg"
       },
@@ -963,7 +963,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 163,
       "metadata": {
         "id": "xXCnP3iTULWw"
       },
@@ -974,7 +974,7 @@
               "np.float64(2.5)"
             ]
           },
-          "execution_count": 115,
+          "execution_count": 163,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -996,7 +996,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 164,
       "metadata": {
         "id": "MC-XVY3IWz3x"
       },
@@ -1019,7 +1019,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 165,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1042,7 +1042,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 117,
+          "execution_count": 165,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1064,7 +1064,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": 166,
       "metadata": {
         "id": "J3emV8dqXlgN"
       },
@@ -1092,7 +1092,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 167,
       "metadata": {
         "id": "64OoS_GZXogM"
       },
@@ -1111,7 +1111,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 119,
+          "execution_count": 167,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1132,7 +1132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": 168,
       "metadata": {},
       "outputs": [
         {
@@ -1171,7 +1171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": 169,
       "metadata": {},
       "outputs": [
         {
@@ -1180,7 +1180,7 @@
               "np.float64(2.2142857142857144)"
             ]
           },
-          "execution_count": 121,
+          "execution_count": 169,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1203,7 +1203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 170,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1234,7 +1234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 171,
       "metadata": {},
       "outputs": [
         {
@@ -1243,7 +1243,7 @@
               "np.float64(0.33333333333333304)"
             ]
           },
-          "execution_count": 123,
+          "execution_count": 171,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1267,7 +1267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 172,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1298,7 +1298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 173,
       "metadata": {},
       "outputs": [
         {
@@ -1307,7 +1307,7 @@
               "array([0.55555556])"
             ]
           },
-          "execution_count": 125,
+          "execution_count": 173,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1329,7 +1329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 174,
       "metadata": {
         "id": "W1tI40DQZJTZ"
       },
@@ -1349,7 +1349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": 175,
       "metadata": {},
       "outputs": [
         {
@@ -1358,7 +1358,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 127,
+          "execution_count": 175,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1384,7 +1384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": 176,
       "metadata": {
         "id": "_1Ty-1wxaKgp"
       },
@@ -1404,7 +1404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": 177,
       "metadata": {},
       "outputs": [
         {
@@ -1413,7 +1413,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 129,
+          "execution_count": 177,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1441,7 +1441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": 178,
       "metadata": {
         "id": "78iwN5f4bKtS"
       },
@@ -1452,7 +1452,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 130,
+          "execution_count": 178,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1476,7 +1476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": 179,
       "metadata": {
         "id": "ve2czA0Ebzdf"
       },
@@ -1487,7 +1487,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 131,
+          "execution_count": 179,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1511,7 +1511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": 180,
       "metadata": {
         "id": "pqbMFuUpaj5m"
       },
@@ -1523,7 +1523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": 181,
       "metadata": {
         "id": "JbEO9iX4VwQG"
       },
@@ -1534,7 +1534,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 133,
+          "execution_count": 181,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1560,7 +1560,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": 182,
       "metadata": {
         "id": "Ri6AjxYpcZol"
       },
@@ -1572,7 +1572,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": 183,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1587,7 +1587,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 135,
+          "execution_count": 183,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1607,7 +1607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 184,
       "metadata": {},
       "outputs": [
         {
@@ -1617,7 +1617,7 @@
           "traceback": [
             "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
             "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[136]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mp19\u001b[49m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[184]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mp19\u001b[49m\n",
             "\u001b[31mNameError\u001b[39m: name 'p19' is not defined"
           ]
         }
