--- a/homework.ipynb
+++ b/homework.ipynb
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": 1,
       "metadata": {
         "id": "vU_BLpXEBq8E"
       },
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": 2,
       "metadata": {
         "id": "WwPXKuYW-MeA"
       },
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -248,7 +248,7 @@
               "7                    2             2  "
             ]
           },
-          "execution_count": 141,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -270,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -294,7 +294,7 @@
               "Name: softness, dtype: int64"
             ]
           },
-          "execution_count": 142,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -330,7 +330,7 @@
               "19"
             ]
           },
-          "execution_count": 143,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -350,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": 6,
       "metadata": {
         "id": "WyNxML4oAvRh"
       },
@@ -372,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -387,7 +387,7 @@
               "np.float64(2.25)"
             ]
           },
-          "execution_count": 145,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -411,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -441,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 9,
       "metadata": {
         "id": "iN_rB_QJBk_K"
       },
@@ -452,7 +452,7 @@
               "Text(0.5, 1.0, 'Rated Flavor vs Estimated Sweetness')"
             ]
           },
-          "execution_count": 147,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -493,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": 10,
       "metadata": {
         "id": "ZcUQ3mnBOLmU"
       },
@@ -507,7 +507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -531,7 +531,7 @@
               "Name: prediction, dtype: int64"
             ]
           },
-          "execution_count": 149,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -555,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": 12,
       "metadata": {
         "id": "CNL0vOHrDfmT"
       },
@@ -578,7 +578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -601,7 +601,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 151,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -623,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": 14,
       "metadata": {
         "id": "tI7Fr0blQFJo"
       },
@@ -635,7 +635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 153,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -659,7 +659,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 153,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -683,7 +683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 154,
+      "execution_count": 16,
       "metadata": {
         "id": "zvIjSLCdGbZM"
       },
@@ -716,7 +716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 155,
+      "execution_count": 17,
       "metadata": {
         "id": "j8QCAkWMGdkv"
       },
@@ -727,7 +727,7 @@
               "array([0.2, 4. , 0.8, 0.8, 0. , 0.8, 0. , 0.8])"
             ]
           },
-          "execution_count": 155,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -749,7 +749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 156,
+      "execution_count": 18,
       "metadata": {
         "id": "7O7AReMcTCEJ"
       },
@@ -761,7 +761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -785,7 +785,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 157,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -808,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": 20,
       "metadata": {
         "id": "P-KRYZurHBQY"
       },
@@ -841,7 +841,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 21,
       "metadata": {
         "id": "vxJZcCrlHDGY"
       },
@@ -852,7 +852,7 @@
               "np.float64(3.795000000000001)"
             ]
           },
-          "execution_count": 159,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -875,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 160,
+      "execution_count": 47,
       "metadata": {
         "id": "d65RLeqxVGeL"
       },
@@ -884,7 +884,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p7(df):\n",
-        "    return df[\"estimated_sweetness\"].rename(\"prediction\")"
+        "    return df[\"estimated_flavor\"].rename(\"prediction\")"
       ]
     },
     {
@@ -898,7 +898,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": 48,
       "metadata": {
         "id": "ihAvfuV4VMLS"
       },
@@ -909,15 +909,15 @@
               "0    4\n",
               "1    5\n",
               "2    3\n",
-              "3    1\n",
+              "3    2\n",
               "4    1\n",
               "5    1\n",
-              "6    1\n",
+              "6    2\n",
               "7    2\n",
               "Name: prediction, dtype: int64"
             ]
           },
-          "execution_count": 161,
+          "execution_count": 48,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -939,7 +939,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": 24,
       "metadata": {
         "id": "88Ip7dA5TyQg"
       },
@@ -963,7 +963,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": 25,
       "metadata": {
         "id": "xXCnP3iTULWw"
       },
@@ -974,7 +974,7 @@
               "np.float64(2.5)"
             ]
           },
-          "execution_count": 163,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -996,7 +996,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": 26,
       "metadata": {
         "id": "MC-XVY3IWz3x"
       },
@@ -1019,7 +1019,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 165,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1042,7 +1042,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 165,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1064,7 +1064,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": 53,
       "metadata": {
         "id": "J3emV8dqXlgN"
       },
@@ -1076,8 +1076,8 @@
         "def p10(df):\n",
         "    return 0.3 * df[\"yellow_rating\"] + 0.1 * df[\"softness\"] + 0.4 * df[\"estimated_sweetness\"]\n",
         "\n",
-        "# L1 = |f(x) - y|\n",
-        "calc_L1 = (p10(mango_data) - mango_data[\"rated_flavor\"])\n",
+        "# L1 loss prediction = |f(x) - y|\n",
+        "calc_L1 = np.mean(p10(mango_data) - mango_data[\"rated_flavor\"])\n",
         "p10 = np.abs(calc_L1)\n"
       ]
     },
@@ -1092,7 +1092,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 167,
+      "execution_count": 54,
       "metadata": {
         "id": "64OoS_GZXogM"
       },
@@ -1100,18 +1100,10 @@
         {
           "data": {
             "text/plain": [
-              "0    1.5\n",
-              "1    3.0\n",
-              "2    0.3\n",
-              "3    0.5\n",
-              "4    0.2\n",
-              "5    0.1\n",
-              "6    0.2\n",
-              "7    0.1\n",
-              "dtype: float64"
+              "np.float64(0.03750000000000003)"
             ]
           },
-          "execution_count": 167,
+          "execution_count": 54,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1132,7 +1124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -1171,7 +1163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 169,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -1180,7 +1172,7 @@
               "np.float64(2.2142857142857144)"
             ]
           },
-          "execution_count": 169,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1203,7 +1195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 170,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1234,7 +1226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 171,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
@@ -1243,7 +1235,7 @@
               "np.float64(0.33333333333333304)"
             ]
           },
-          "execution_count": 171,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1267,9 +1259,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": 34,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/tmp/ipykernel_9640/229892201.py:16: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+            "  p13 = float(model.coef_)\n"
+          ]
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
@@ -1286,7 +1287,7 @@
         "model.fit(X,Y)\n",
         "\n",
         "# Additive constant = y-intercept \n",
-        "p13 = model.coef_"
+        "p13 = float(model.coef_)"
       ]
     },
     {
@@ -1298,16 +1299,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 173,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "array([0.55555556])"
+              "0.5555555555555557"
             ]
           },
-          "execution_count": 173,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1329,7 +1330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 174,
+      "execution_count": 36,
       "metadata": {
         "id": "W1tI40DQZJTZ"
       },
@@ -1349,7 +1350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 175,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -1358,7 +1359,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 175,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1384,7 +1385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 176,
+      "execution_count": 38,
       "metadata": {
         "id": "_1Ty-1wxaKgp"
       },
@@ -1404,7 +1405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 177,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
@@ -1413,7 +1414,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 177,
+          "execution_count": 39,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1441,7 +1442,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 178,
+      "execution_count": 40,
       "metadata": {
         "id": "78iwN5f4bKtS"
       },
@@ -1452,7 +1453,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 178,
+          "execution_count": 40,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1476,7 +1477,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 179,
+      "execution_count": 41,
       "metadata": {
         "id": "ve2czA0Ebzdf"
       },
@@ -1487,7 +1488,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 179,
+          "execution_count": 41,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1511,7 +1512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 180,
+      "execution_count": 42,
       "metadata": {
         "id": "pqbMFuUpaj5m"
       },
@@ -1523,7 +1524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 181,
+      "execution_count": 43,
       "metadata": {
         "id": "JbEO9iX4VwQG"
       },
@@ -1534,7 +1535,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 181,
+          "execution_count": 43,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1560,7 +1561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 182,
+      "execution_count": 44,
       "metadata": {
         "id": "Ri6AjxYpcZol"
       },
@@ -1572,7 +1573,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 183,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1587,7 +1588,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 183,
+          "execution_count": 45,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1607,7 +1608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 184,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
@@ -1617,7 +1618,7 @@
           "traceback": [
             "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
             "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[184]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mp19\u001b[49m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[46]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mp19\u001b[49m\n",
             "\u001b[31mNameError\u001b[39m: name 'p19' is not defined"
           ]
         }
