--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {
     "id": "pqbMFuUpaj5m"
    },
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "id": "JbEO9iX4VwQG"
    },
@@ -1591,10 +1591,18 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(0.18999999999999995)"
+       "0   -1.420\n",
+       "1   -2.125\n",
+       "2    0.595\n",
+       "3    0.820\n",
+       "4    0.955\n",
+       "5    0.955\n",
+       "6    0.920\n",
+       "7    0.820\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1604,13 +1612,13 @@
     "\n",
     "# L2 loss prediction = (f(x) - y)**2\n",
     "calc_L2 = f18(mango_data) - mango_data[\"rated_flavor\"]\n",
-    "mean_L2 = np.mean(np.square(calc_L2))\n",
+    "mean_L2 = np.square(calc_L2)\n",
     "\n",
     "# variance of target = np.var(mango_data[\"rated_flavor\"], ddof=1)\n",
-    "var_y = np.var(df[\"rated_flavor\"], ddof=1)\n",
+    "var_y = np.var(mango_data[\"rated_flavor\"], ddof=1)\n",
     "\n",
     "# R^2 = 1 - mean_L2 / var_y\n",
-    "p18 = 1 - (mean_L2 / var_y)\n",
+    "p18 = 1 - mean_L2 / var_y\n",
     "p18\n"
    ]
   },
